# AutoPlanning

./: 7B6BA030  README.MD  _types.py  api.py  credentials.json  export.py  main.py  planning _complexe.xlsx  planning.xlsm  planning.xlsx  planning_cnsmdp.xlsx  planning_output.xlsx  planning_salles.xlsx  pyproject.toml  requirements.txt  sallesCNSMDP.xlsx  seancesCNSMDP.xlsx  test_api.py  test_main.py  tools.py
FrontEnd/PlannerView/: README.md  angular.json  package-lock.json  package.json
FrontEnd/PlannerView/src/: index.html
FrontEnd/PlannerView/src/app/: app.component.spec.ts  app.component.ts
